--- a/Mushroom_Classfication through libraries.ipynb
+++ b/Mushroom_Classfication through libraries.ipynb
@@ -2869,7 +2869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2878,7 +2878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -3253,7 +3253,7 @@
        "[8124 rows x 116 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3271,7 +3271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3281,7 +3281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3291,7 +3291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3321,7 +3330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3333,7 +3342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3345,7 +3354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3356,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3394,7 +3403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3428,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3511,7 +3520,7 @@
        "1  1.000000   1.000000  1.000000  1.000000     1.000000  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3529,7 +3538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3539,7 +3548,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3551,7 +3560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3617,7 +3626,7 @@
        "All        1272  1166  2438"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3628,7 +3637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3694,7 +3703,7 @@
        "All        1272  1166  2438"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3705,7 +3714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3729,6 +3738,13 @@
     "plt.xticks(rotation=90, fontsize=12)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
